# Focus-lock

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  netlify.toml  vercel.json
.github/workflows/: ci.yml  release.yml
api/: download.js  get-reviews.js  submit-review.js  subscribe.js
daemon-mac/: Package.swift  com.focuslock.daemon.plist  entitlements.plist
daemon-mac/Sources/FocusLockDaemon/: HostsService.swift  InterceptHttpService.swift  IpcSocketService.swift  Models.swift  ProcessKillService.swift  ProfileService.swift  ScheduleService.swift  main.swift  (+1 more)
daemon-win/FocusLock.Daemon/: DaemonWorker.cs  FocusLock.Daemon.csproj  InterceptHttpService.cs  IpcPipeService.cs  Program.cs  ServiceWatchdogService.cs
installer/macos/: build-pkg.sh  distribution.xml  install.sh  uninstall.sh
installer/windows/: FocusLock.wxs  install.ps1  uninstall.ps1
landing/: changelog.html  index.html  privacy.html  terms.html
netlify/functions/: download.js  get-reviews.js  package.json  submit-review.js  subscribe.js
scripts/: generate-icons.mjs
shared/: protocol.ts
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  index.css
ui/src-tauri/: Cargo.toml  nsis-hook.nsh  tauri.conf.json  tauri.windows.conf.json
ui/src-tauri/capabilities/: main.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/resources/: FocusLockDaemon.deps.json  install-service.ps1
ui/src-tauri/src/: lib.rs  main.rs
update-server/: package-lock.json  package.json  tsconfig.json  wrangler.toml
update-server/src/: index.ts
(+34 files in other folders)
